--- a/source/stylesheets/default.scss
+++ b/source/stylesheets/default.scss
@@ -30,7 +30,7 @@ body {
 
 .background {
     min-width: 900px;
-    background-image:    url('/img/bg-repeat.png');
+    background-image:    url('/images/bg-repeat.png');
     background-repeat:   repeat;
     background-position: center top;
 }
