--- a/source/stylesheets/person.css.scss
+++ b/source/stylesheets/person.css.scss
@@ -1,7 +1,7 @@
 /**
  * Styles for /people/:person/.
  */
-@import "default.scss";
+@import "default.css.scss";
 @import "_opacity.scss";
 
 .person-page .background-image {
