Fix image paths.

--- a/source/people/amanda.sun/index.html.haml
+++ b/source/people/amanda.sun/index.html.haml
@@ -2,11 +2,10 @@
 :page: person
 :title: Amanda Sun
 :description: SoundBYTES bio for Amanda Sun.
-:layout: layout
 ---
 .person#amanda(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
   .collage
-    %img#headshot(src="/img/members/amanda.jpg")
+    %img#headshot{src: asset_path(:images, 'members/amanda.jpg')}}
   %h1(itemprop="name") Amanda Sun
   .bio
     %p
