--- a/source/people/charlie.harper/index.html.haml
+++ b/source/people/charlie.harper/index.html.haml
@@ -2,11 +2,10 @@
 :page: person
 :title: Charlie Harper
 :description: SoundBYTES bio for Charlie Harper.
-:layout: layout
 ---
 .person#charlie(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
   .collage
-    %img#headshot(src="/img/members/charlie.jpg")
+    %img#headshot{src: asset_path(:images, 'members/charlie.jpg')}}
   %h1(itemprop="name") Charlie Harper
   %span(itemprop="affiliation" style="display:none;") SoundBYTES
   .bio
