--- a/source/people/hannah.krajnik/index.html.haml
+++ b/source/people/hannah.krajnik/index.html.haml
@@ -2,11 +2,10 @@
 :page: person
 :title: Hannah Krajnik
 :description: SoundBYTES bio for Hannah Krajnik.
-:layout: layout
 ---
 .person#hannah(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
   .collage
-    %img#headshot(src="/img/members/hannah.jpg")
+    %img#headshot{src: asset_path(:images, 'members/hannah.jpg')}}
   %h1(itemprop="name") Hannah Krajnik
   %span(itemprop="affiliation" style="display:none;") SoundBYTES
   .bio
