--- a/source/people/jeremie.wallis/index.html.haml
+++ b/source/people/jeremie.wallis/index.html.haml
@@ -2,11 +2,10 @@
 :page: person
 :title: Jeremie Wallis
 :description: SoundBYTES bio for Jeremie Wallis.
-:layout: layout
 ---
 .person#jeremie(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
   .collage
-    %img#headshot(src="/img/members/jeremie.jpg")
+    %img#headshot{src: asset_path(:images, 'members/jeremie.jpg')}}
   %h1(itemprop="name") Jeremie Wallis
   %span(itemprop="affiliation" style="display:none;") SoundBYTES
   .bio
