--- a/source/people/natalie.karbelnig/index.html.haml
+++ b/source/people/natalie.karbelnig/index.html.haml
@@ -2,11 +2,10 @@
 :page: person
 :title: Natalie Karbelnig
 :description: SoundBYTES bio for Natalie Karbelnig.
-:layout: layout
 ---
 .person#natalie(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
   .collage
-    %img#headshot(src="/img/members/natalie.jpg")
+    %img#headshot{src: asset_path(:images, 'members/natalie.jpg')}}
   %h1(itemprop="name") Natalie Karbelnig
   %span(itemprop="affiliation" style="display:none;") SoundBYTES
   .bio
