--- a/source/people/revathi.murthy/index.html.haml
+++ b/source/people/revathi.murthy/index.html.haml
@@ -2,11 +2,10 @@
 :page: person
 :title: Revathi Murthy
 :description: SoundBYTES bio for Revathi Murthy.
-:layout: layout
 ---
 .person#revathi(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
   .collage
-    %img#headshot(src="/img/members/revathi.jpg")
+    %img#headshot{src: asset_path(:images, 'members/revathi.jpg')}}
   %h1(itemprop="name") Revathi Murthy
   %span(itemprop="affiliation" style="display:none;") SoundBYTES
   .bio
