--- a/source/people/sean.anastasi/index.html.haml
+++ b/source/people/sean.anastasi/index.html.haml
@@ -2,11 +2,10 @@
 :page: person
 :title: Sean Anastasi
 :description: SoundBYTES bio for Sean Anastasi.
-:layout: layout
 ---
 .person#sean(itemscope="itemscope" itemtype="http://data-vocabulary.org/Person")
   .collage
-    %img#headshot(src="/img/members/sean/headshot.jpg")
+    %img#headshot{src: asset_path(:images, 'members/sean/headshot.jpg')}}
     %img.fade#collage1(src="/img/members/sean/collage1.jpg")
     %img.fade#collage2(src="/img/members/sean/collage2.jpg")
     %img.fade#collage3(src="/img/members/sean/collage3.jpg")
