Reorganize performances page.

--- a/source/stylesheets/default.css.scss
+++ b/source/stylesheets/default.css.scss
@@ -23,7 +23,7 @@ p a { color: #3B5998; }
 
 body {
     min-width: 1024px;
-    overflow: hidden;
+    /*overflow: hidden;*/
     background-color: black;
 }
 
