--- a/source/performances.html.haml
+++ b/source/performances.html.haml
@@ -4,8 +4,64 @@
 :description: Upcoming performances for SoundBYTES.
 :layout: layout
 ---
-%section#performances
-  %h1 Upcoming Performances
+.shows
+  %h2 Shows
+  %section.show
+    %img.poster{src: asset_path(:images, 'hangover-poster.jpg')}
+    <span class="title">The Hangover: A Musical</span> is an a cappella musical
+    inspired by the popular film released in 2009. This show was an enormous success
+    at it's debut last Autumn, we're excited to bring it back to the U-District again! 
+
+  %section.show
+    %img.poster{src: asset_path(:images, 'jack-sparrow-poster.jpg')}
+    <span class="title">Jack Sparrow: A Musical</span> is an a cappella musical
+    inspired by the movies Pirates of the Carribbean and Ocean's Eleven.
+
+.showtimes
+  %h2 Showtimes
+  %section.showtime
+    %h3.title The Hangover: A Musical
+    .event(itemscope itemtype="http://data-vocabulary.org/Event")
+      .summary(itemprop="summary" style="display:none;") The Hangover: A Musical
+      .time
+        %time(itemprop="startDate" datetime="2011-05-12T16:00:00 -07:00") May 12th, 4pm 
+        %time(itemprop="endDate" datetime="2011-05-12T17:30:00:00 -07:00") 5:30pm
+      @ <span itemprop="locaiton">UW Ethnic Cultural Theatre</span>
+      %a.buybutton(href="http://www.brownpapertickets.com/event/241895" itemprop="url") Buy Tickets on BPT
+        
+    .event(itemscope itemtype="http://data-vocabulary.org/Event")
+      .summary(itemprop="summary" style="display:none;") The Hangover: A Musical
+      .time
+        %time(itemprop="startDate" datetime="2011-05-19T18:00:00 -07:00") May 19th, 6pm -
+        %time(itemprop="endDate" datetime="2011-05-19T19:30:00:00 -07:00") 7:30pm
+      @ <span itemprop="location">Theatre4, Seattle Center House</span>
+      %a.buybutton(href="http://www.brownpapertickets.com/event/241897" itemprop="url") Buy Tickets on BPT
+
+  %section.showtime
+    %h3.title Jack Sparrow: A Musical
+    .event(itemscope itemtype="http://data-vocabulary.org/Event")
+      .summary(itemprop="summary" style="display:none;") Jack Sparrow: A Musical
+      .time
+        %time(itemprop="startDate" datetime="2011-05-18T18:00:00 -07:00") May 18th, 6pm -
+        %time(itemprop="endDate" datetime="2011-05-18T19:30:00:00 -07:00") 7:30pm
+      @ <span itemprop="location">UW Penthouse Theatre</span>
+      %a.buybutton(href="http://www.brownpapertickets.com/event/241900" itemprop="url") Buy Tickets on BPT
+      
+    .event(itemscope itemtype="http://data-vocabulary.org/Event")
+      .summary(itemprop="summary" style="display:none;") Jack Sparrow: A Musical
+      .time
+        %time(itemprop="startDate" datetime="2011-05-18T20:00:00 -07:00") May 18th, 8pm -
+        %time(itemprop="endDate" datetime="2011-05-18T21:30:00 -07:00") 9:30pm
+      @ <span itemprop="location">UW Penthouse Theatre</span>
+      %a.buybutton(href="http://www.brownpapertickets.com/event/241900" itemprop="url") Buy Tickets on BPT
+      
+    .event(itemscope itemtype="http://data-vocabulary.org/Event")
+      .summary(itemprop="summary" style="display:none;") Jack Sparrow: A Musical
+      .time
+        %time(itemprop="startDate" datetime="2011-05-18T20:00:00 -07:00")  May 19th, 8pm -
+        %time(itemprop="endDate" datetime="2011-05-18T21:30:00 -07:00") 9:30pm
+      @ <span itemprop="location">Theatre4, Seattle Center House</span>
+      %a.buybutton(href="http://www.brownpapertickets.com/event/241972" itemprop="url") Buy Tickets on BPT
 
   %section(itemscope itemtype="http://data-vocabulary.org/Event")
     .time
@@ -14,70 +70,4 @@
       %a(id="Kaffeeklatsch_Apr_29" href="http://seattlesoundbytes.com/performances/#Kaffeeklatsch_Apr_29" itemprop="url")
       %p(itemprop="summary")
         Performance at <a href="http://www.kaffeeklatschseattle.com/"><span itemprop="location">Kaffeeklatsch Coffee</span></a>
-
-  %section
-    %section(itemscope itemtype="http://data-vocabulary.org/Event")
-      .time
-        %time(itemprop="startDate" datetime="2011-05-12T16:00:00 -08:00") May 12th, 4pm -
-        %time(itemprop="endDate" datetime="2011-05-12T17:30:00:00 -08:00") 5:30pm
-      .description
-        %a(href="http://www.brownpapertickets.com/event/241895" itemprop="url")
-        %h2(itemprop="summary")
-          <em>The Hangover</em>: A Musical
-        <span style="display:none" itemprop="location">UW Ethnic Cultural Center Theater</span>
-          
-    %section(itemscope itemtype="http://data-vocabulary.org/Event")
-      .time
-        %time(itemprop="startDate" datetime="2011-05-19T18:00:00 -08:00") May 19th, 6pm -
-        %time(itemprop="endDate" datetime="2011-05-19T19:30:00:00 -07:30") 7:30pm
-      .description
-        %a(href="http://www.brownpapertickets.com/event/241897" itemprop="url")
-        %h2(itemprop="summary" style="display:none;")
-          <em>The Hangover</em>: A Musical
-        <span style="display:none" itemprop="location">Seattle Center House - 4th Floor</span>
-        %p(itemprop="description")
-          A musical inspired by the movie, The Hangover.
-          This show was an enormous success at it's debut last Autumn, we're excited to bring it back to the U-District again!
-        %p
-          Performance on May 12th at the UW <a href="http://depts.washington.edu/ecc/about-the-center-and-theatre/">Ethnic Cultural Center Theater</a>.
-          Tickets on <a href="http://www.brownpapertickets.com/event/241895">Brown Paper Tickets</a>.
-        %p
-          Performance on May 19th at the Seattle Center House (4th Floor).
-          Tickets on <a href="http://www.brownpapertickets.com/event/241897">Brown Paper Tickets</a>.
-        
-  %section
-    %section(itemscope itemtype="http://data-vocabulary.org/Event")
-      .time
-        %time(itemprop="startDate" datetime="2011-05-18T18:00:00 -08:00") May 18th, 6pm -
-        %time(itemprop="endDate" datetime="2011-05-18T19:30:00 -08:00") 7:30pm
-      .description
-        %a(href="http://www.brownpapertickets.com/event/241900" itemprop="url")
-        %h2(itemprop="summary" style="display:none;")
-          <em>Jack Sparrow</em>
-
-    %section(itemscope itemtype="http://data-vocabulary.org/Event")
-      .time
-        %time(itemprop="startDate" datetime="2011-05-18T20:00:00 -08:00") May 18th, 8pm -
-        %time(itemprop="endDate" datetime="2011-05-18T21:30:00 -08:00") 9:30pm
-      .description
-        %a(href="http://www.brownpapertickets.com/event/241900" itemprop="url")
-        %h2(itemprop="summary" style="display:none;")
-          <em>Jack Sparrow</em>
-
-    %section(itemscope itemtype="http://data-vocabulary.org/Event")
-      .time
-        %time(itemprop="startDate" datetime="2011-05-19T20:00:00 -08:00") May 19th, 8pm -
-        %time(itemprop="endDate" datetime="2011-05-19T21:30:00 -08:00") 9:30pm
-      .description
-        %a(href="http://www.brownpapertickets.com/event/241972" itemprop="url")
-        %h2(itemprop="summary")
-          <em>Jack Sparrow</em>
-        %p(itemprop="description")
-          A new musical inspired by Pirates of the Caribbean and Ocean's Eleven!
-        %p
-          Two performances on May 18th at the UW <a href="http://depts.washington.edu/uwdrama/performances/venues.shtml#Penthouse"><span itemprop="location">Penthouse Theater</span></a>.
-          Tickets on <a href="http://www.brownpapertickets.com/event/241900">Brown Paper Tickets</a>.
-        %p
-          One performace on May 19th at Theater4 in downtown Seattle.
-          Tickets on <a href="http://www.brownpapertickets.com/event/241972">Brown Paper Tickets</a>.
 
