--- a/source/performances.html.haml
+++ b/source/performances.html.haml
@@ -34,7 +34,7 @@
       .time
         %time(itemprop="startDate" datetime="2011-05-12T16:00:00 -07:00") May 12th, 4pm 
         %time(itemprop="endDate" datetime="2011-05-12T17:30:00:00 -07:00") 5:30pm
-      @ <span itemprop="locaiton">UW Ethnic Cultural Theatre</span>
+      @ <span itemprop="location">UW Ethnic Cultural Theatre</span>
       %a.buybutton(href="http://www.brownpapertickets.com/event/241895" itemprop="url") Buy Tickets on BPT
         
     .event(itemscope itemtype="http://data-vocabulary.org/Event")
